2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* std_hooks.lua: Check for both "vi" and "notepad.exe" as fallback
	editors.  If no editor was found, print a helpful message instead
	of just running "vi" anyway.  Print a message if the editor exited
	with error.

2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* file_io.cc (mkdir_p, make_dir_for): Increase error checking.
	* commands.cc (checkout): Make sure that checkout target directory
	does not already exist.  Also use system_path more uniformly.
	* tests/t_checkout_dir.at: Test.
	* tests/t_setup_existing_path.at: New test.

2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* commands.cc (read): Optionally take files on command line.
	* tests/t_read_from_file.at, testsuite.at: New test.
	* monotone.texi (Network Service): Show Jim using this.
	(Packet I/O, Commands): Document.
	* monotone.1: Likewise.

2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* change_set.cc (move_files_from_tmp_top_down): Typo again.
	
2005-08-26  Nathaniel Smith  <njs@pobox.com>
	
	* database.cc (open): Convert stray line to paths.cc.

2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* change_set.cc (move_files_from_tmp_top_down): Typo.

	* file_io.cc (move_path): New function.
	(move_file, move_dir): Minor cleanup -- use
	require_path_is_nonexistent.

	* work.cc (build_deletions): Use delete_file, rather than unlink.
	If file is already non-existent, do nothing.
	(build_rename): Use move_path, rather than rename.  If file
	already appears to have been renamed, do nothing.

2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* app_state.cc (allow_working_copy): Make logging more sensible.

2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* transforms.cc (length): 
	* database.cc (sql, load, open): 
	* commands.cc (rename, attr): 
	* change_set.cc (move_files_to_tmp_bottom_up) 
	(move_files_from_tmp_top_down): Merge fixups.

2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* database_check.cc: Track and report on manifest and revision
	parseability.